Ignore the |readonly| attribute in <input type=range>

Attribute |readonly| must be ignored in <input type=range> per spec [1]

Test was changed accordingly

[1] https://html.spec.whatwg.org/#range-state-(type=range)

BUG=693037

Review-Url: https://codereview.chromium.org/2703013002
Cr-Commit-Position: refs/heads/master@{#451539}