third_party/WebKit/Source/core/html/forms/RangeInputType.cpp
@@ -152,7 +152,7 @@ bool RangeInputType::isSteppable() const {
 }
 
 void RangeInputType::handleMouseDownEvent(MouseEvent* event) {
-  if (element().isDisabledOrReadOnly())
+  if (element().isDisabledFormControl())
     return;
 
   Node* targetNode = event->target()->toNode();
@@ -171,7 +171,7 @@ void RangeInputType::handleMouseDownEvent(MouseEvent* event) {
 }
 
 void RangeInputType::handleKeydownEvent(KeyboardEvent* event) {
-  if (element().isDisabledOrReadOnly())
+  if (element().isDisabledFormControl())
     return;
 
   const String& key = event->key();
