third_party/WebKit/Source/core/html/shadow/SliderThumbElement.cpp
@@ -207,7 +207,7 @@ void SliderThumbElement::defaultEventHandler(Event* event) {
   // Missing this kind of check is likely to occur elsewhere if adding it in
   // each shadow element.
   HTMLInputElement* input = hostInput();
-  if (!input || input->isDisabledOrReadOnly()) {
+  if (!input || input->isDisabledFormControl()) {
     stopDragging();
     HTMLDivElement::defaultEventHandler(event);
     return;
@@ -240,7 +240,7 @@ void SliderThumbElement::defaultEventHandler(Event* event) {
 
 bool SliderThumbElement::willRespondToMouseMoveEvents() {
   const HTMLInputElement* input = hostInput();
-  if (input && !input->isDisabledOrReadOnly() && m_inDragMode)
+  if (input && !input->isDisabledFormControl() && m_inDragMode)
     return true;
 
   return HTMLDivElement::willRespondToMouseMoveEvents();
@@ -248,7 +248,7 @@ bool SliderThumbElement::willRespondToMouseMoveEvents() {
 
 bool SliderThumbElement::willRespondToMouseClickEvents() {
   const HTMLInputElement* input = hostInput();
-  if (input && !input->isDisabledOrReadOnly())
+  if (input && !input->isDisabledFormControl())
     return true;
 
   return HTMLDivElement::willRespondToMouseClickEvents();
@@ -328,7 +328,7 @@ void SliderContainerElement::defaultEventHandler(Event* event) {
 
 void SliderContainerElement::handleTouchEvent(TouchEvent* event) {
   HTMLInputElement* input = hostInput();
-  if (input->isDisabledOrReadOnly())
+  if (input->isDisabledFormControl())
     return;
 
   if (event->type() == EventTypeNames::touchend) {
